--- a/wp-content/themes/understrap-child/sass/theme/partials/global_styles/_modules_styles.scss
+++ b/wp-content/themes/understrap-child/sass/theme/partials/global_styles/_modules_styles.scss
@@ -1,7 +1,8 @@
-
 a.link {
     &__advance {
         &--chevron {
+            padding-left: 0px;
+            padding-right: 0px;
             cursor: pointer;
             width: $ms-4;
             margin: $rvr-6 auto;
@@ -10,10 +11,12 @@ a.link {
             .st0 {
                 stroke: $link-color;
             }
-               svg#Layer_1 {
-        stroke: $link-color;
-    }
-        stroke: $link-color;
+
+            svg#Layer_1 {
+                stroke: $link-color;
+            }
+
+            stroke: $link-color;
         }
     }
 }
@@ -42,63 +45,176 @@ a.link {
     margin-bottom: $rvr-4;
 }
 
-.page__header {
+// .my-value__container__advance .page__header{
+//     & h2{letter-spacing: -.2rem;
+//         width: 22%;}
+//     & h3{
+//         @include ms-respond(font-size, 2.5);
+//         padding-left: 0;
+//         width: 78%;
+//     }
+// }
+
+.my-value .page__header {
     align-items: center;
 
     h2 {
-        font-size: ms(6.5);
-        letter-spacing: -.5rem;
-        padding: 0;
-        margin-left: -1rem;
-        margin-right: 1rem;
-        margin-bottom: 0;
+        @include ms-respond(font-size, 5.7);
+
+        line-height: 1;
     }
 
     h3 {
         letter-spacing: -.05rem;
-        font-size: ms(3.9);
-        line-height: $rvr-1_75;
-        padding-right: ms(1);
+
+        @include ms-respond(font-size, 3);
+
+        line-height: $rvr-1_5;
+
+        // padding-right: ms(1);
         font-weight: 500;
+
+        // .br{
+        //     display: block;
+        // }
+   
     }
 
     h4 {
-        @extend .display-line-height;
-        font-size: $display-3-font-size;
-        color: $display-color;
-        font-family: $display-font-family;
-        font-weight: $display-font-weight;
-        margin-bottom: $display-margin-bottom;
-        }
+        @extend .display;
+
+        line-height: $rvr-1_5;
+    }
 
     p {
         @include ms-respond(font-size, 2);
+    }
+
+    @media (min-width: 400px) {
+        h3 {
+            @include ms-respond(font-size, 3.35);
+
+            line-height: $rvr-1_75;
         }
-    
+    }
+
+    @include media-breakpoint-up(sm) {
+        h3 {
+            display: block;
+        }
+    }
+
+
     @include media-breakpoint-up(md) {
-        h2 { 
-            @include ms-respond(font-size, 5.5);
+        h2 {
+            @include ms-respond(font-size, 6);
+
             line-height: 1;
-            margin-left: 0;
-            margin-right: 0;
         }
-        h3 { 
-            @include ms-respond(font-size, 3.4);
-             line-height: 1; 
+
+        h3 {
+            @include ms-respond(font-size, 3.8);
+
+            line-height: 1;
+
             // line-height: $rvr-2;
             // line-height: 1;
-            }
-        h4 {
-             @include ms-respond(font-size, 3);
-              line-height: 1.3; 
-        } 
-        p {
-             @include ms-respond(font-size, 2);
+       
         }
+
+        h4 {
+            @include ms-respond(font-size, 2.8);
+
+            line-height: $rvr-1_5;
+            letter-spacing: -.05rem;
+        }
+
+        p {
+            @include ms-respond(font-size, 2);
+        }
+    }
+
+
+    @media (min-width: 992px) {
+        h2 {
+            @include ms-respond(font-size, 5.25);
+
+            letter-spacing: -.2rem;
+        }
+
+        h3 {
+            @include ms-respond(font-size, 2.65);
+
+            padding-left: .5rem;
+            line-height: $rvr-1_75;
+        }
+
+        h4 {
+            @include ms-respond(font-size, 2.5);
+            padding-left: 0;
+            line-height: $rvr-2;
+        }
+    }
 }
+
+.my-value__container__grow, .my-value__container__modernize, .my-value__container__optimize {
+    & .page__header {
+        & h2 {
+            letter-spacing: -.3rem;
+
+            @include media-breakpoint-up(lg) {
+                letter-spacing: -.3rem;
+            }
+        }
+    }
+}
+
+.my-value__container__modernize {
+    & .page__header {
+        & h3 {
+            // @include ms-respond(font-size, 5.6);
+       
+        }
+    }
+
+    @include media-breakpoint-up(sm) {
+        letter-spacing: unset;
+    }
 }
 
 
+
+
+// #main > section > article:nth-child(2) > div > div > hgroup .page__header  h2{
+//     @media (min-width: 992px){
+//     width: 15%;
+//     max-width: 15%;
+//     }
+// }
+
+// #main > section > article:nth-child(2) > div > div > hgroup h3{
+//     @media (min-width: 992px){
+//     width: 73%;
+//     max-width: 73%;
+//     // padding-left: 1rem;
+//     }
+// }
+
+
+
+
+.my-value__container__advance {
+    & .page__header {
+        & h3 {
+            
+            .br {
+                @include media-breakpoint-up(lg) {
+                    display: none;
+                }
+            }
+        }
+    }
+}
 
 .delta--down {
     fill: $secondary;
@@ -116,10 +232,9 @@ a.link {
 
     /* Add a mouse pointer on hover */
     background: $tungsten;
-    padding: .75rem;
+    padding: .05rem .5rem .25rem .5rem;
     border-radius: .25rem;
 }
-
 
 .table-wrap {
     position: relative;
@@ -141,55 +256,64 @@ a.link {
     // padding: 3rem;
     // color: #111;
     table-layout: fixed;
-    width: 95%;
+    width: 100%;
     align-self: baseline;
 
+    thead, th {
+        font-size: .75rem;
+        text-transform: lowercase;
+    }
 
-thead, th{
-       font-size: .75rem;
-               text-transform: lowercase;
-           }
-    thead th, .capa-table__title{
+    thead th, .capa-table__title {
         background-color: $slate;
         color: #fff;
-        padding: ms(.25);
+        padding: ms(0.25);
         letter-spacing: .01rem;
         font-weight: 300;
-}
+    }
 
-.capa-table__title{
-text-transform: uppercase;
-font-weight: 300;
-font-size: 1rem;
-letter-spacing: .05rem;
- border-bottom: thin solid #fff;
-}
+    .capa-table__title {
+        text-transform: uppercase;
+        font-weight: 300;
+        font-size: 1rem;
+        letter-spacing: .05rem;
+        border-bottom: thin solid #fff;
+    }
 
     // tbody > tr > :nth-child(1) {
     //     padding-left: $ms-2_25;
     // }
 
     tbody td {
-        padding: 1.25rem $ms-1_5;
+        padding: 1.25rem 0;
         color: $gray-900;
         font-weight: 300;
-         border: thin solid #fff;
-         font-size: .75rem;
-         letter-spacing: -.005rem;
-         vertical-align: middle;
+        border: thin solid #fff;
+        font-size: .65rem;
+        letter-spacing: -.005rem;
+        vertical-align: middle;
+
+        @include media-breakpoint-up(sm) {
+            font-size: .75rem;
+            min-height: $rvr-4_75;
+        }
     }
 
     td {
         text-align: center;
         line-height: $rvr-1;
         height: $rvr-2;
+
         // vertical-align: top;
         // padding-right: $rvr-2;
+   
     }
 
     th {
         text-align: center;
+
         // padding-left: $ms-1;
+   
     }
 
     caption {
@@ -199,7 +323,9 @@ letter-spacing: .05rem;
         font-weight: 300;
         margin-bottom: $rvr-_25;
         padding-left: $ms-2_25;
+
         // max-width: ms(11);
+   
     }
 }
 
@@ -235,9 +361,8 @@ letter-spacing: .05rem;
 // }
 
 .capa-table__column--1 {
-    // padding-left: $ms-2_25;    
+    // padding-left: $ms-2_25;
     width: 35%;
-
 }
 
 .capa-table__column--2 {
@@ -248,32 +373,37 @@ letter-spacing: .05rem;
     width: 25%;
 }
 
+.value-table {
+    @include ms-respond(font-size, 1.5);
 
+    font-family: $font-family-monospace;
+    width: ms(9.5);
+    flex: 0 0 auto;
+    margin-bottom: auto;
+    margin-left: -1rem;
 
-.value-table{
-	font-family: $font-family-monospace;
-	font-size: ms(2);
-	width: ms(8.75);
-	flex: 0 0 auto;
-	margin-bottom: auto;
+    @include media-breakpoint-up(md) {
+        @include ms-respond(font-size, 2);
+    }
 }
 
-.value-table-left-pad{
-	padding-left: ms(.5);
+.value-table-left-pad {
+    padding-left: ms(0.5);
 }
 
-.value-row-underscore{
-border-bottom: thin solid $primary;
+.value-row-underscore {
+    border-bottom: thin solid $primary;
 }
 
 // ==========================================================================
 // contact page
 // ==========================================================================
-#contact{
-    h1{
+#contact {
+    h1 {
         @extend .headline;
     }
-    p{
+
+    p {
         @extend .display;
     }
 }
@@ -290,11 +420,11 @@ border-bottom: thin solid $primary;
 .contact__form {
     @include make-col-ready;
     @include make-col(12);
+
     padding-left: 0;
     padding-right: 0;
-    @include media-breakpoint-up(md) {
-        
-    }
+
+    @include media-breakpoint-up(md) {}
 }
 
 .contact-form-message {
