--- a/wp-content/themes/understrap-child/sass/theme/partials/global_styles/_navbar_styles.scss
+++ b/wp-content/themes/understrap-child/sass/theme/partials/global_styles/_navbar_styles.scss
@@ -64,6 +64,7 @@ svg#bug {
 
 .navbar-toggler {
     background: $primary;
+    padding: .05rem .5rem;
 }
 
 .navbar-toggler-icon{
@@ -85,7 +86,10 @@ button:focus {
 }
 
 .navbar {
+  padding: .25rem 0 .25rem 0;
+    @include media-breakpoint-up(sm){
     padding: 1rem;
+}
 }
 
 .navbar-dark {
@@ -102,7 +106,10 @@ button:focus {
 
 .navbar-brand {
     margin-right: 0;
-    margin-left: 1rem;
+
+     @include media-breakpoint-up(md) {
+  margin-left: ms(3);  
+ }
 }
 
 .custom-logo-link {
@@ -128,6 +135,7 @@ button:focus {
     color: $secondary !important;
     font-size: $ms-1;
     text-transform: lowercase;
+ @include ms-respond(font-size, 1);
 
     @include media-breakpoint-up(lg) {
         font-size: $ms-2_75;
