--- a/wp-content/themes/understrap-child/sass/theme/partials/global_styles/_utility_styles.scss
+++ b/wp-content/themes/understrap-child/sass/theme/partials/global_styles/_utility_styles.scss
@@ -49,8 +49,18 @@
 
 .chev--dwn{
     width: 1rem;
+    height: 1.5rem;
+    @include media-breakpoint-up(sm) {
+    width: 1rem;
     stroke-width: .1rem;
     stroke-linecap: round;
+}
+}
+
+@media (max-width: 400px){
+    .diagram__objectives--vertical .diagram-content li{
+        letter-spacing: -.05rem;
+    }
 }
 // @mixin myccon(){
 //     @include make-container(){
@@ -64,3 +74,4 @@
 //     padding-right: 0px;
 // }
 // }
+
