--- a/wp-content/themes/understrap-child/sass/theme/partials/section_styles/_panel_styles.scss
+++ b/wp-content/themes/understrap-child/sass/theme/partials/section_styles/_panel_styles.scss
@@ -38,7 +38,7 @@
 // business-value panel / subpanels(panels are horizontal)
 .splash {
     h1 {
-        @extend .headline;
+        @extend .title;
     }
 
     h2 {
@@ -49,6 +49,10 @@
         @extend .display;
     }
 }
+
+
+
+
 
 .home-page__my-mo__container{
     text-align: left;
@@ -65,17 +69,7 @@
     p {
         @extend .body;
     }
-}
-}
-
-
-
-
-
-.home-page__my-mo__container{
-    text-align: left;
-    .split-container{     
- @include media-breakpoint-up(lg) {
+     @include media-breakpoint-up(lg) {
         @include make-col-ready();
         @include make-col(7);
         padding-left: 0px;
@@ -83,6 +77,7 @@
 }
 }
 }
+
 
 
 .home-page__whatido__container, .home-page__my-mo__container, .home-page__howidoit__container{
@@ -156,7 +151,7 @@
 }
 
 .howidoit__disciplines_content {
-    margin-bottom: $rvr-_25;
+    margin-bottom: $rvr-_75;
     h5, p {
         text-align: left;
 
@@ -201,9 +196,9 @@ text-transform: capitalize;
     }
 }
 
-.home_page__myqualifications__container {
-    h3{
-        // font-size: $display-4-font-size;
+.home-page__myqualifications__container {
+    h1{
+       @extend .page__title;
     }
 }
 
@@ -218,7 +213,7 @@ text-transform: capitalize;
     text-align: center;
 }
 
-.container.business-value {
+.business-value {
   
 #main > section > article.panel-fluid.business-value.modernize > div{
     justify-content: left;
@@ -226,8 +221,6 @@ text-transform: capitalize;
 }
 
 .stats {
-//     background: $slate-tint-200;
-    // border: ms(.00005) solid $slate-tint-200;
     box-shadow: inset 0 0 0 .5px $slate-tint-200;
 }
 
@@ -241,75 +234,20 @@ text-transform: capitalize;
     justify-content: left;
 }
 
-#main > section > article:nth-child(3) > div > div > hgroup > h3{
-//   font-size: ms(3.7);
-  .br{
-    display: none;
-  }
-}
 
 .business-value p {
-    // @extend .body-line-height;
-    // font-size: $body-3-font-size;
-    // color: $body-color;
-    // font-family: $body-font-family;
-    // font-weight: $body-font-weight;
-    // margin-bottom: $body-margin-bottom;
+  
 }
-
-// panel styles
-
-// individual panel styles
-
-// .splash{
-//     h1 {
-
-//     }
-
-//     h2, h3 {           
-//         font-size: $display-3-font-size;
-//         color: $display-color;
-//         font-family: $display-font-family;
-//         font-weight: $display-font-weight;
-//     }
-
-//     p {                
-//         font-size: $body-3-font-size;
-//         color: $body-color;
-//         font-family: $body-font-family;
-//         font-weight: $body-font-weight;
-//     }
-// }
-
-// .my-mo{
-//     h1 {
-//     }
-
-//     h2 {
-
-//     }
-
-//     p {                
-//         font-size: $body-3-font-size;
-//         color: $body-color;
-//         font-family: $body-font-family;
-//         font-weight: $body-font-weight;
-//     }
-// }
-
-// .splash{
-//  @extend .container-fluid;
-//  }
 
  
 .home-page__splash {
       text-align: center;
     h1 {
-        @include ms-respond(font-size, 5);
+        @extend .title;
     }
 
     h2 {
-        font-size: ms(3.85);
+        @extend .subhead;
         letter-spacing: -.05rem;
 
         @include media-breakpoint-up(lg) {
@@ -318,24 +256,27 @@ text-transform: capitalize;
     }
 
     h3 {
-        font-size: $display-3-font-size;
-        font-weight: 300;
+        @extend .display;
+        @include ms-respond(font-size, 2);
           
             .br{display: flex;}
     }
 
     p:first-of-type {
-        font-size: ms(2.75);
-        line-height: $rvr-1_5;
+        @extend .body;
+        line-height: $rvr-1;
+        @include ms-respond(font-size, 1.75);
     }
 
     p:last-of-type {
         // font-size: ms(2.25);
         // font-style: italic;
         @extend .body;
-
         font-style: italic;
+        line-height: $rvr-1;
+         @include ms-respond(font-size, 1.75);
     }
+
         @include media-breakpoint-up(xl) {
         h1 {
             font-size: ms(5.5);
@@ -346,7 +287,6 @@ text-transform: capitalize;
         }
         h3 { 
         font-size: ms(2);
-        line-height: $rvr-1_25;
         .br{display: none;
          }
         }
@@ -359,7 +299,7 @@ text-transform: capitalize;
 }
 
 
-.splash.why-me__splash {
+.why-me__splash {
     padding-left: ms(3);
     text-align: left;
 
@@ -402,27 +342,28 @@ text-transform: capitalize;
     }
 }
 
-.my-value__splash__container{
-    padding-left: ms(3);
-    text-align: left;
+// .my-value__splash__container{
+//     padding-left: ms(3);
+//     text-align: left;
 
-    h1 {
-        padding-left: $ms-3;
+//     h1 {
+//         padding-left: $ms-3;
 
-        // flex: 0 0 auto;
+//         // flex: 0 0 auto;
    
-    }
+//     }
 
-    h2 {
-        font-family: $font-family-serif;
-        padding-left: $ms-3;
-        font-style: italic;
-        max-width: $ms-10;
+//     h2 {
+//         @extend .display;
+//         font-family: $font-family-serif;
+//         padding-left: $ms-3;
+//         font-style: italic;
+//         max-width: $ms-10;
 
-        // flex: 0 0 auto;
+//         // flex: 0 0 auto;
    
-    }
-}
+//     }
+// }
 
 .about-me.splash {
     padding-left: ms(3);
@@ -489,14 +430,15 @@ text-transform: capitalize;
 
 .home-page__whatiam__container {
     text-align: left;
-    padding: $rvr-6 $ms-5;
+//     padding: $rvr-6 15px;
 
     h2{
          // @include media-breakpoint-up(md) {max-width: ms(11.3);
          .br{
-            // display: block;
+            display: block;
          }
          letter-spacing: -.05rem;
+//          max-width: ms(12);
     }
 
    h3 {
@@ -507,7 +449,7 @@ text-transform: capitalize;
         text-align: left;
         max-width: ms(11);
         @include media-breakpoint-up(md) {
-            max-width: ms(11.35);
+            max-width: ms(12);
         }
     }
 
