pre child theme update

--- a/wp-content/themes/understrap-child/sass/child-theme.scss
+++ b/wp-content/themes/understrap-child/sass/child-theme.scss
@@ -1,21 +1,19 @@
 
+@import "theme/partials/3rd_party_imports/fontface_import"; 
 @import "node_modules/mathsass/dist/math";
 @import "node_modules/vertical-rhythm-reset/dist/vertical-rhythm-reset";
-@import "theme/partials/3rd_party_imports/fontface_import"; // <--------- Loads here to ensure @fontface placement at front of css
-// @import "node_modules/modularscale-sass/stylesheets/_modularscale.scss";
+// <--------- Loads here to ensure @fontface placement at front of css
 // @import "node_modules/mathsass/dist/math";
 // @import "theme/partials/controls/vertical_rhythm_controls";
-// @import "theme/partials/3rd_party_imports/node_module_import";
-// @import "theme/partials/functions/responsive_text_functions";
 // @import "theme/am_theme_partials_import";  // <--------- Add your variables into this file. Also add variables to overwrite Bootstrap variables here
-@import "theme/partials/variables/variables_override";
-// @import "theme/child_theme_variables";
-@import "assets/bootstrap4";// <--------- Loads Bootstrap3 or Bootstrap4. Change from /bootstrap3 to /bootstrap4 Watch out! just for testing in the moment!
-// @import "theme/partials/variables/variables_import";
 
-// @import "theme/partials/variables/line_height_variables";
+@import "theme/partials/variables/variables_override";
+@import "assets/bootstrap4";// <--------- Loads Bootstrap3 or Bootstrap4. Change from /bootstrap3 to /bootstrap4 Watch out! just for testing in the moment!
+
+
+
 // @import "theme/partials/mixins/type_style_mixins";
-@import "theme/partials/bootstrap_overrides/bootstrap_root_override";
+// @import "theme/partials/bootstrap_overrides/bootstrap_root_override";
 
 @import "../src/sass/understrap/understrap/understrap";// <-------- Loads the UnderStrap defaults. Just a few classes to incorporate BS in WP
 @import "../src/sass/understrap/theme/contact-form7";// <-------- Loads some basic styling for contact form 7 plugin
@@ -29,20 +27,20 @@
  // @import "theme/devstyles";  // <--------- scratchpad for css templates DELETE BEFORE STAGING
 // @import "theme/dev_utilities/canvas"; //<---------------css staging for invididual elements
 @import "theme/partials/base_styles/global_styles.scss";
-// @import "theme/partials/base_styles/color_base_styles";
-// @import "theme/partials/variables/font_family_and_style_variables";
-// @import "theme/partials/base_styles/type_class_definitions.scss";
-@import "theme/partials/controls/vertical_rhythm_controls";
+
+
+// @import "theme/partials/base_styles/custom_variables.scss";
 // @import "theme/partials/base_styles/base_styles_import";
 @import "theme/partials/mixins/flexbox_mixins";
-// @import "theme/partials/mixins/mixins_import";
+@import "theme/partials/mixins/bp_and_query_definitions_mixins";
+
 @import "theme/partials/article_layout_templates/article_layout_templates_import";
 // @import "theme/partials/theme_customization/theme_customization_import";
 @import "theme/partials/layout_customizations/layout_customizations_import";
 @import "theme/partials/modules/modules_import";
-// @import "theme/partials/utility_styles/utility_styles_import";
 @import "theme/partials/utility_styles/flex_state_styles";
-@import "theme/partials/utility_styles/individual_tweaks";
+@import "theme/partials/utility_styles/display_state_styles";
+@import "theme/partials/utility_styles/graphics_and_artwork_styles";
 @import "theme/partials/base_styles/vert_rhythm_base_styles.scss";
 @import "theme/dev_utilities/sandbox";
  @import "theme/atomicmouse";  // <--------- Add your styles into this file
