--- a/wp-content/themes/understrap-child/sass/theme/partials/base_styles/_custom_variables.scss
+++ b/wp-content/themes/understrap-child/sass/theme/partials/base_styles/_custom_variables.scss
@@ -1,3 +1,9 @@
+// h1{font-size: unset; margin-top: unset; margin-bottom: unset; margin-left: unset; margin-right: unset;}
+// h2{font-size: unset; margin-top: unset; margin-bottom: unset; margin-left: unset; margin-right: unset;}
+// h3{font-size: unset; margin-top: unset; margin-bottom: unset; margin-left: unset; margin-right: unset;}
+// h4{font-size: unset; margin-top: unset; margin-bottom: unset; margin-left: unset; margin-right: unset;}
+// h5{font-size: unset; margin-top: unset; margin-bottom: unset; margin-left: unset; margin-right: unset;}
+// h6{font-size: unset; margin-top: unset; margin-bottom: unset; margin-left: unset; margin-right: unset;}
 // // $white:    #fff !default;
 // // $gray-100: #f8f9fa !default;
 // // $gray-200: #e9ecef !default;
@@ -321,9 +327,10 @@ desktop-xxl:   2560px
 // // Font, line-height, and color for body text, headings, and more.
 
 // // stylelint-disable value-keyword-case
-$font-family-sans-serif:      geomanist, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
-$font-family-monospace:       Arial, SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;
+$font-family-sans-serif:    -apple-system, BlinkMacSystemFont, geomanist, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
+$font-family-monospace:     arial, roboto, SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;
 $font-family-serif:         adobe-garamond-pro, Georgia, Palatino, "Times New Roman", Courier;
+$font-family-base:          $font-family-sans-serif;
 
 // $font-family-base:            $font-family-sans-serif !default;
 // // stylelint-enable value-keyword-case
@@ -332,31 +339,40 @@ $font-family-serif:         adobe-garamond-pro, Georgia, Palatino, "Times New Ro
 // $font-size-lg:                ($font-size-base * 1.25) !default;
 // $font-size-sm:                ($font-size-base * .875) !default;
 
-$font-weight-thin:          100;
-$font-weight-light:         200;
-$font-weight-normal:        300;
-$font-weight-medium:        400;
-$font-weight-bold:          500;
-$font-weight-black:         600;
+$font-weight-thin:          	100;
+$font-weight-light:         	200;
+$font-weight-normal:        	300;
+$font-weight-medium:        	400;
+$font-weight-bold:         	 	500;
+$font-weight-black:         	600;
 
 
-$headline-font-family:      $font-family-sans-serif;
-$subhead-font-family:      	$font-family-sans-serif;
-$sublist-font-family:      	$font-family-sans-serif;
-$display-font-family:       $font-family-sans-serif;
-$body-font-family:          $font-family-serif;
-$para-font-family:          $font-family-serif;
-$lead-font-family:          $font-family-sans-serif;
-$link-font-family:			$font-family-monospace;
-$nav-font-family:			$font-family-monospace;
+$headline-font-family:      	$font-family-sans-serif;
+$subhead-font-family:      		$font-family-sans-serif;
+$sublist-font-family:      		$font-family-sans-serif;
+$display-text-font-family:  	$font-family-sans-serif;
+$body-text-font-family:     	$font-family-serif;
+$para-font-family:          	$font-family-serif;
+$lead-font-family:          	$font-family-sans-serif;
+$link-font-family:				$font-family-monospace;
+$nav-font-family:				$font-family-monospace;
 
-$headline-font-weight:      600;
-$subhead-font-weight:       400;
-$sublist-font-weight:       600;
-$display-font-weight:		300;
-$body-font-weight:          300;
-$para-font-weight:          300;
-$lead-font-weight:          400;
+$headline-font-weight:      	600;
+$subhead-font-weight:       	400;
+$sublist-font-weight:       	600;
+$display-text-font-weight:		300;
+$body-text-font-weight:    		300;
+$para-font-weight:          	300;
+$lead-font-weight:          	400;
+	
+$title-color:					inherit;
+$headline-color:				inherit;
+$subhead-color:					inherit;
+$display-text-color:			inherit;
+$body-text-color:				inherit;
+$para-color: 					inherit;
+
+
 // $font-weight-base:            $font-weight-normal !default;
 // $line-height-base:            1.5 !default;
 
@@ -1039,3 +1055,108 @@ $lead-font-weight:          400;
 // // Printing
 // $print-page-size:                   a3 !default;
 // $print-body-min-width:              map-get($grid-breakpoints, "lg") !default;
+
+
+
+///
+// CUSTOM VARIABLES
+
+//
+
+
+
+
+h1, h2, h3, h4, h5, h6{
+	font-family:   $headline-font-family;
+	color:         $headline-color;        
+	font-weight:   $headline-font-weight; 
+// margin-bottom: %headline-margin-bottom;
+}
+
+p{
+// font-size:     $body-3-font-size;
+font-family:   $body-font-family;
+color:         $body-color;        
+font-weight:   $body-font-weight; 
+// margin-bottom: $body-margin-bottom;
+}
+
+
+
+.title{
+// @include ms-respond(font-size,4.5);
+font-family:   $headline-font-family;
+color:         $headline-color;        
+font-weight:   700;
+// margin-bottom: $rvr-10 !important; 
+}
+
+%headline{
+// @include ms-respond(font-size, 3.5);
+font-family:   $headline-font-family;
+color:         $headline-color;        
+font-weight:   $headline-font-weight; 
+// margin-bottom: %headline-margin-bottom;
+
+}
+
+%subhead{
+// @include ms-respond(font-size, 3);
+font-family:   $subhead-font-family;
+color:         $subhead-color;        
+font-weight:   400; 
+// margin-bottom: %headline-margin-bottom;
+
+}
+
+%sublist{
+// @include ms-respond(font-size, 3);
+font-family:   $subhead-font-family;
+color:         $subhead-color;        
+font-weight:   $subhead-font-weight; 
+// margin-bottom: $display-margin-bottom;
+
+}
+
+%display-text{
+// @include ms-respond(font-size, 2.5);
+font-family:   $display-text-font-family;
+color:         $display-text-color;        
+font-weight:   $display-text-font-weight; 
+// margin-bottom: $display-margin-bottom;
+
+}
+
+%body-text{
+// @include ms-respond(font-size, 2.25);
+font-family:   $body-font-family;
+color:         $body-text-color;        
+font-weight:   $body-font-weight; 
+// margin-bottom: $body-margin-bottom;
+
+}
+
+.lead {
+	font-weight: $lead-font-weight;
+}
+
+
+%para{
+	font-family: $font-family-serif;
+}
+
+.page__title{
+    // font-size: $h3-font-size;
+    font-family: $font-family-serif;
+    font-style: italic;
+}
+.caption{}
+
+
+.link      		  {
+	font-family: $font-family-sans-serif;
+	color: $link-color;
+}
+
+
+
