--- a/wp-content/themes/understrap-child/src/sass/understrap/assets/bootstrap4.scss
+++ b/wp-content/themes/understrap-child/src/sass/understrap/assets/bootstrap4.scss
@@ -9,7 +9,7 @@
 @import "../../src/sass/bootstrap4/variables";
 @import "../../src/sass/bootstrap4/mixins";
 @import "../../src/sass/bootstrap4/root";
-@import "../../src/sass/bootstrap4/reboot";
+// @import "../../src/sass/bootstrap4/reboot";
 @import "../../src/sass/bootstrap4/type";
 @import "../../src/sass/bootstrap4/images";
 @import "../../src/sass/bootstrap4/code";
